# EDAPipeline

./: .gitignore  pyproject.toml
src/edapipeline/: __init__.py  config.py  legacy.py  pipeline.py  results.py  types.py
src/edapipeline/analyzers/: __init__.py  base.py  bivariate.py  categorical.py  correlation.py  datetime_analyzer.py  missing.py  numerical.py  outlier.py  overview.py
src/edapipeline/utils/: __init__.py  dtype_detection.py  logging.py  validators.py
src/edapipeline/visualization/: __init__.py  base.py  matplotlib_viz.py
tests/: test_legacy.py  test_pipeline.py
